--- a/MarkingTestTask.Presentation/Tabs/PalletsUserControl.xaml
+++ b/MarkingTestTask.Presentation/Tabs/PalletsUserControl.xaml
@@ -17,10 +17,9 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="*"/>
+            <RowDefinition Height="auto"/>
         </Grid.RowDefinitions>
-
         <TextBlock Grid.Row="0" Text="Паллеты" HorizontalAlignment="Center" FontWeight="Bold" FontSize="16" Margin="0,10,0,20"/>
-
         <ScrollViewer Grid.Row="1" VerticalScrollBarVisibility="Auto">
             <DataGrid AutoGenerateColumns="False" ItemsSource="{Binding Pallets}" IsReadOnly="True">
                 <DataGrid.Columns>
@@ -29,5 +28,6 @@
                 </DataGrid.Columns>
             </DataGrid>
         </ScrollViewer>
+        <Button Grid.Row="2" Content="Создать карту раскладки" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="10" Command="{Binding CreateLayoutCommand}"/>
     </Grid>
 </UserControl>
